Closed
Bug 1024966
Opened 11 years ago
Closed 11 years ago
SelectionCarets::UpdateSelectionCarets should check whether the frame is null or not
Categories
(Core :: DOM: Selection, defect)
Tracking
()
RESOLVED
FIXED
mozilla33
People
(Reporter: slee, Assigned: mtseng)
References
Details
Attachments
(1 file)
|
1.21 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
When the element is hide, nsIContent, [1], will be null. If we do not skip it, it generates too many assertion fail and cause test case fails, [2].
[1] http://dxr.mozilla.org/mozilla-central/source/layout/base/SelectionCarets.cpp#472
[2] https://tbpl.mozilla.org/php/getParsedLog.php?id=41663846&tree=Try&full=1
| Assignee | ||
Comment 1•11 years ago
|
||
Check mResultContent before using it!
Attachment #8452958 -
Flags: review?(roc)
Attachment #8452958 -
Flags: review?(roc) → review+
| Assignee | ||
Comment 2•11 years ago
|
||
| Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 3•11 years ago
|
||
Keywords: checkin-needed
Comment 4•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in
before you can comment on or make changes to this bug.
Description
•