Bug 1024966 - Check mResultContent before using it. r=roc